--- a/Course1819/ex01/playbook.yml
+++ b/Course1819/ex01/playbook.yml
@@ -3,15 +3,15 @@
   tasks:
     - name: Instalar Apache
       apt: name=apache2 state=present update_cache=yes
-    - name: Instalar MySQL
-      apt: name=mysql-server state= update_cache=yes
+    - name: Instalar MySQL con sus dependencias
+      apt: name={{item}} state=present update_cache=yes
+      with_items:
+        - mysql-server-5.6
+        - python-mysqldb
     - name: Comprobar que los servicios están funcionando
       service: name={{item}} state=started
       with_items:
         - apache2
         - mysql
     - name: Crear el usuario Pepe en MySQL con los permisos adecuados
-      mysql_user:
-        name: pepe
-        password: 123456
-        priv: "*.*.ALL"
+      mysql_user: name=pepe   password=123456  priv="*.*:ALL"
