--- a/Course1819/ex01/Vagrantfile
+++ b/Course1819/ex01/Vagrantfile
@@ -1,15 +1,16 @@
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "ubuntu/xenial64"
+  config.vm.box = "debian/jessie64"
 
   config.vm.network "public_network"
-  config.vm.provider "virtualbox" do |v|
+
+  config.vm.provider "libvirt" do |v|
     v.memory = 256
   end
 
   config.vm.provision "ansible" do |ansible|
-     ansible.playbook = "playbook.yml",
-     ansible.extra_vars = { ansible_python_interpreter:"/usr/bin/python3" }      
+     ansible.playbook = "playbook.yml"
+     #ansible.extra_vars = { ansible_python_interpreter:"/usr/bin/python3" }      
   end
   
 end
