--- a/Course1819/ex01/Vagrantfile
+++ b/Course1819/ex01/Vagrantfile
@@ -1,12 +1,10 @@
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "debian/jessie64"
+  config.vm.box = "ubuntu/trusty64"
 
   config.vm.network "public_network"
 
-  config.vm.provider "libvirt" do |v|
-    v.memory = 256
-  end
+  
 
   config.vm.provision "ansible" do |ansible|
      ansible.playbook = "playbook.yml"
